--- a/index.html
+++ b/index.html
@@ -2,259 +2,347 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Akshaya G | Portfolio</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
 *{
- margin:0;
- padding:0;
- box-sizing:border-box;
- font-family:Poppins,Segoe UI,sans-serif;
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  font-family:Poppins,Segoe UI,sans-serif;
 }
-
 body{
- background:radial-gradient(circle at top,#0b0014,#05050a,#000);
- color:#f5f5f5;
+  background:#0f0f0f;
+  color:#fff;
+  scroll-behavior:smooth;
 }
 
-/* HEADER */
-header{
- background:radial-gradient(circle at top,#ff2f92,#3a0b22,#000);
- text-align:center;
- padding:50px 20px;
- box-shadow:0 0 60px #ff2f92;
+/* TOGGLE */
+.toggle-btn{
+  position:fixed;
+  left:20px;
+  top:20px;
+  padding:8px 12px;
+  border:none;
+  border-radius:50%;
+  background:#ff5fa2;
+  color:white;
+  cursor:pointer;
+  z-index:300;
 }
 
-.profile{
- width:130px;
- height:130px;
- border-radius:50%;
- border:4px solid #ff77bd;
- box-shadow:0 0 40px #ff2f92;
+/* SIDE NAV */
+.side-nav{
+  position:fixed;
+  right:20px;
+  top:35%;
+  z-index:200;
+}
+.side-nav a{
+  display:block;
+  margin:10px 0;
+  padding:8px 14px;
+  background:#ff5fa2;
+  color:white;
+  border-radius:20px;
+  text-decoration:none;
+  font-size:14px;
 }
 
-/* SLIDER */
-.slider{
- margin-top:10px;
- height:30px;
- overflow:hidden;
- font-size:1.1rem;
- font-weight:600;
- color:#ffd1e8;
+/* HERO */
+.hero{
+  min-height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  padding:60px;
+}
+.profile-box img{
+  width:230px;
+  border-radius:50%;
+  border:5px solid #ff5fa2;
+  animation:float 3s ease-in-out infinite;
+}
+@keyframes float{
+  0%{transform:translateY(0)}
+  50%{transform:translateY(-10px)}
+  100%{transform:translateY(0)}
+}
+.intro{
+  max-width:60%;
+}
+.intro h1{
+  font-size:48px;
+  color:#ff5fa2;
+}
+#typing{
+  margin:10px 0;
+  font-weight:400;
+}
+.btn{
+  display:inline-block;
+  margin-top:20px;
+  padding:10px 20px;
+  background:#ff5fa2;
+  color:white;
+  border-radius:25px;
+  text-decoration:none;
+}
+.btn:hover{
+  box-shadow:0 0 15px #ff5fa2;
 }
 
-.slider div{
- animation:slide 6s infinite;
+/* SECTION */
+section{
+  padding:80px 60px;
+  border-bottom:1px solid rgba(255,255,255,0.05);
 }
-
-@keyframes slide{
- 0%{transform:translateY(0)}
- 33%{transform:translateY(-30px)}
- 66%{transform:translateY(-60px)}
- 100%{transform:translateY(0)}
+.section{
+  opacity:0;
+  transform:translateX(-60px);
+  transition:0.8s;
 }
-
-nav{margin-top:20px;}
-
-nav button{
- background:none;
- border:2px solid #ff77bd;
- color:white;
- padding:6px 16px;
- margin:5px;
- border-radius:20px;
- cursor:pointer;
+.section.show{
+  opacity:1;
+  transform:translateX(0);
 }
-
-/* PAGES */
-.page{
- display:none;
- padding:25px;
- animation:fade 0.6s;
+h2{
+  color:#ff5fa2;
+  margin-bottom:20px;
 }
-.page.active{display:block;}
-
-@keyframes fade{
- from{opacity:0;transform:translateY(40px)}
- to{opacity:1;transform:translateY(0)}
-}
-
-/* CARD */
-.card{
- background:#0e0e18;
- margin-bottom:20px;
- padding:20px;
- border-radius:18px;
- box-shadow:0 0 25px rgba(255,47,146,0.4);
-}
-
-h2{color:#ff2f92;margin-bottom:10px;}
 
 /* SKILLS */
-.skills span{
- display:inline-block;
- background:#1f1f33;
- color:#ffd1e8;
- padding:8px 16px;
- margin:6px;
- border-radius:20px;
- box-shadow:0 0 12px rgba(255,47,146,0.4);
+.skills-container{
+  display:flex;
+  flex-wrap:wrap;
+  gap:15px;
+}
+.skill-card{
+  background:#ff5fa2;
+  padding:10px 18px;
+  border-radius:20px;
+  font-size:14px;
 }
 
-/* CERTIFICATES */
-.certs img{
- width:100%;
- max-width:260px;
- border-radius:12px;
- box-shadow:0 0 20px #ff2f92;
- margin:10px 0;
+/* PROJECTS */
+.project{
+  background:#1c1c1c;
+  padding:20px;
+  border-radius:12px;
+  margin-bottom:20px;
 }
 
-/* FLOATING GLITTER BUTTON */
-.floating{
- position:fixed;
- bottom:20px;
- right:20px;
- background:#ff2f92;
- padding:14px 18px;
- border-radius:50%;
- color:white;
- font-size:20px;
- box-shadow:0 0 25px #ff2f92;
- animation:glow 2s infinite alternate;
- cursor:pointer;
+/* CURRENT LEARNING */
+.learning{
+  background:#1c1c1c;
+  padding:20px;
+  border-radius:12px;
+  margin-bottom:15px;
 }
 
-@keyframes glow{
- from{box-shadow:0 0 15px #ff2f92}
- to{box-shadow:0 0 35px #ff77bd}
+/* CERTIFICATE */
+.certificate{
+  background:#1c1c1c;
+  padding:15px;
+  border-radius:10px;
+  margin-bottom:10px;
 }
 
-footer{
- text-align:center;
- color:#aaa;
- padding:15px;
+/* LIGHT MODE */
+.light{
+  background:white;
+  color:black;
+}
+.light h1,.light h2{
+  color:#ff5fa2;
+}
+.light .project,
+.light .certificate,
+.light .learning{
+  background:#f2f2f2;
+}
+
+/* RESPONSIVE */
+@media(max-width:900px){
+  .hero{
+    flex-direction:column;
+    text-align:center;
+  }
+  .intro{
+    max-width:100%;
+  }
+  .side-nav{
+    display:none;
+  }
 }
 </style>
 </head>
 
 <body>
 
-<header>
- <img src="profile.jpg" class="profile">
- <h1>Akshaya G</h1>
+<button class="toggle-btn" id="toggle">🌙</button>
 
- <div class="slider">
-  <div>
-   B.Tech CSBS Student<br>
-   Programmer & Analyst<br>
-   Future Tech Professional
-  </div>
- </div>
-
- <nav>
-  <button onclick="showPage('home')">Home</button>
-  <button onclick="showPage('profile')">Profile</button>
-  <button onclick="showPage('projects')">Projects</button>
-  <button onclick="showPage('achievements')">Achievements</button>
-  <button onclick="showPage('resume')">Resume</button>
- </nav>
-</header>
-
-<!-- HOME -->
-<div id="home" class="page active">
- <div class="card">
-  <h2>Objective</h2>
-  <p>
-   To build a strong career in Computer Science and Business Systems by applying
-   programming, analytics, and problem-solving skills.
-  </p>
- </div>
+<div class="side-nav">
+  <a href="#about">About</a>
+  <a href="#learning">Learning</a>
+  <a href="#skills">Skills</a>
+  <a href="#projects">Projects</a>
+  <a href="#resume">Resume</a>
 </div>
 
-<!-- PROFILE -->
-<div id="profile" class="page">
- <div class="card">
+<!-- HERO -->
+<section class="hero">
+  <div class="profile-box">
+    <img src="images/profile.jpg" alt="Akshaya G">
+  </div>
+
+  <div class="intro">
+    <h1>Akshaya G</h1>
+    <h3 id="typing"></h3>
+    <p>Rooted in self-growth, building skills in software & data analytics.</p>
+    <a href="#contact" class="btn">Contact Me</a>
+  </div>
+</section>
+
+<!-- ABOUT -->
+<section class="section" id="about">
   <h2>About Me</h2>
   <p>
-   CSBS student passionate about software development, databases,
-   and data-driven decision making.
+    I am a B.Tech Computer Science and Business Systems (CSBS) student with interest in
+    software development, databases, and data-driven decision making. I focus on
+    continuous learning through courses, coding platforms, and hands-on projects.
   </p>
- </div>
+</section>
 
- <div class="card">
-  <h2>Skills</h2>
-  <div class="skills">
-   <span>C</span><span>Java</span><span>Python</span>
-   <span>HTML</span><span>CSS</span><span>SQL</span>
-   <span>Problem Solving</span><span>Communication</span>
+<!-- CURRENT LEARNING -->
+<section class="section" id="learning">
+  <h2>Currently Learning</h2>
+
+  <div class="learning">
+    📘 <strong>NPTEL – Database Management System</strong><br>
+    Applied and actively learning core DBMS concepts such as SQL, normalization,
+    transactions, and indexing.
   </div>
- </div>
-</div>
+
+  <div class="learning">
+    💻 <strong>freeCodeCamp – HTML & CSS</strong><br>
+    Learning responsive web design, layouts, and best practices through hands-on exercises.
+  </div>
+
+  <div class="learning">
+    🧠 <strong>LeetCode</strong><br>
+    Practicing problem-solving and improving logical thinking using coding challenges.
+  </div>
+</section>
+
+<!-- SKILLS -->
+<section class="section" id="skills">
+  <h2>Skills</h2>
+  <div class="skills-container">
+    <div class="skill-card">HTML</div>
+    <div class="skill-card">CSS</div>
+    <div class="skill-card">Python</div>
+    <div class="skill-card">C Programming</div>
+    <div class="skill-card">MySQL</div>
+    <div class="skill-card">Power BI</div>
+    <div class="skill-card">GitHub</div>
+  </div>
+</section>
 
 <!-- PROJECTS -->
-<div id="projects" class="page">
- <div class="card">
+<section class="section" id="projects">
   <h2>Projects</h2>
-  <p><b>Portfolio Website</b> – HTML, CSS, UI Design</p>
-  <p><b>Data Analysis</b> – Python, Pandas</p>
-  <p><b>SQL Practice</b> – MySQL queries</p>
- </div>
-</div>
 
-<!-- ACHIEVEMENTS -->
-<div id="achievements" class="page">
- <div class="card">
-  <h2>Certifications & Outcomes</h2>
-
-  <div class="certs">
-   <img src="cert_python.jpg">
-   <p><b>Python Certification</b><br>
-   Gained strong foundation in logic, loops, functions, and data handling.</p>
-
-   <img src="cert_html.jpg">
-   <p><b>HTML & CSS Certification</b><br>
-   Learned responsive web design and UI development.</p>
-
-   <img src="cert_sql.jpg">
-   <p><b>SQL Certification</b><br>
-   Improved database querying and data management skills.</p>
+  <div class="project">
+    <h3>Personal Portfolio Website</h3>
+    <p>Designed and developed a responsive portfolio using HTML & CSS.</p>
   </div>
- </div>
-</div>
+
+  <div class="project">
+    <h3>Power BI Dashboard</h3>
+    <p>Created an interactive dashboard to analyze mental health data.</p>
+  </div>
+</section>
 
 <!-- RESUME -->
-<div id="resume" class="page">
- <div class="card">
-  <h2>My Resume</h2>
+<section class="section" id="resume">
+  <h2>Resume</h2>
+  <a class="btn" href="resume/Akshaya_Resume.pdf" target="_blank">View Resume</a>
+  <a class="btn" href="resume/Akshaya_Resume.pdf" download>Download</a>
+</section>
 
-  <iframe src="resume.pdf"
-   width="100%" height="500px"
-   style="border-radius:12px;border:2px solid #ff2f92;">
-  </iframe>
+<!-- CERTIFICATES -->
+<section class="section" id="certificates">
+  <h2>Certificates</h2>
 
-  <br><br>
-  <a href="resume.pdf" download
-   style="padding:10px 20px;background:#ff2f92;
-   color:white;border-radius:20px;text-decoration:none;">
-   ⬇ Download Resume
-  </a>
- </div>
-</div>
+  <div class="certificate">
+    HTML Certificate – <a href="certificates/html_certificate.pdf" target="_blank">View</a>
+  </div>
 
-<footer>
-© 2025 Akshaya G | CSBS Portfolio
+  <div class="certificate">
+    CSS Certificate – <a href="certificates/css_certificate.pdf" target="_blank">View</a>
+  </div>
+</section>
+
+<!-- CONTACT -->
+<section class="section" id="contact">
+  <h2>Contact</h2>
+  <p>Email: akshayagopi0712@gmail.com</p>
+  <p>
+    LinkedIn:
+    <a href="https://www.linkedin.com/in/akshaya-gopi-7b18a5371" target="_blank">
+      Profile
+    </a>
+  </p>
+</section>
+
+<footer style="text-align:center;padding:30px;opacity:0.7">
+  © 2025 Akshaya G | Portfolio
 </footer>
 
-<div class="floating" onclick="showPage('profile')">✨</div>
-
+<!-- TYPING -->
 <script>
-function showPage(id){
- document.querySelectorAll('.page')
- .forEach(p=>p.classList.remove('active'));
- document.getElementById(id).classList.add('active');
+const texts=[
+ "B.Tech CSBS Student",
+ "Aspiring Software Developer",
+ "Data Analytics Enthusiast"
+];
+let i=0,j=0,el=document.getElementById("typing");
+function type(){
+ if(j<texts[i].length){
+  el.textContent+=texts[i][j++];
+  setTimeout(type,100);
+ }else setTimeout(erase,1500);
 }
+function erase(){
+ if(j>0){
+  el.textContent=texts[i].substring(0,--j);
+  setTimeout(erase,60);
+ }else{
+  i=(i+1)%texts.length;
+  setTimeout(type,300);
+ }
+}
+type();
+</script>
+
+<!-- SLIDE -->
+<script>
+const sections=document.querySelectorAll(".section");
+window.addEventListener("scroll",()=>{
+ sections.forEach(s=>{
+  if(s.getBoundingClientRect().top<window.innerHeight-100)
+   s.classList.add("show");
+ })
+});
+</script>
+
+<!-- TOGGLE -->
+<script>
+document.getElementById("toggle").onclick=()=>{
+ document.body.classList.toggle("light");
+};
 </script>
 
 </body>
