--- a/index.html
+++ b/index.html
@@ -4,425 +4,163 @@
 <meta charset="UTF-8">
 <title>Akshaya G | Portfolio</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <style>
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-  font-family:Poppins,Segoe UI,sans-serif;
-}
-
-/* ---------- BODY & THEME ---------- */
-body{
-  background: linear-gradient(135deg,#0f0f0f,#1a1a1a);
-  color:#fff;
-  scroll-behavior:smooth;
-  transition: background 0.5s, color 0.5s;
-}
-
-/* ---------- DARK/LIGHT TOGGLE ---------- */
-.toggle-btn{
-  position:fixed;
-  left:20px;
-  top:20px;
-  padding:10px 14px;
-  border:none;
-  border-radius:50%;
-  background:#ff5fa2;
-  color:white;
-  cursor:pointer;
-  z-index:300;
-  box-shadow:0 0 15px #ff5fa2;
-}
-
-/* ---------- SIDE NAV ---------- */
-.side-nav{
-  position:fixed;
-  right:20px;
-  top:35%;
-  z-index:200;
-}
-.side-nav a{
-  display:block;
-  margin:10px 0;
-  padding:8px 14px;
-  background:#ff5fa2;
-  color:white;
-  border-radius:20px;
-  text-decoration:none;
-  font-size:14px;
-  transition: transform 0.3s;
-}
-.side-nav a:hover{
-  transform: scale(1.1);
-}
-
-/* ---------- HERO ---------- */
-.hero{
-  min-height:100vh;
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-  padding:60px;
-}
-.profile-box{
-  position:relative;
-}
-.profile-box img{
-  width:220px;
-  border-radius:50%;
-  border:5px solid #ff5fa2;
-  animation:float 3s ease-in-out infinite;
-  box-shadow:0 0 15px #ff5fa2;
-}
-@keyframes float{
-  0%{transform:translateY(0)}
-  50%{transform:translateY(-10px)}
-  100%{transform:translateY(0)}
-}
-.glitter-border{
-  position:absolute;
-  top:-5px; left:-5px;
-  width:230px; height:230px;
-  border-radius:50%;
-  background: conic-gradient(#ff5fa2,#ff69b4,#ff5fa2,#ff69b4);
-  filter: blur(10px);
-  animation: spin 4s linear infinite;
-  z-index:-1;
-}
-@keyframes spin{
-  0%{transform:rotate(0deg);}
-  100%{transform:rotate(360deg);}
-}
-
-.intro{
-  max-width:60%;
-}
-.intro h1{
-  font-size:48px;
-  color:#ff5fa2;
-}
-#typing{
-  margin:10px 0;
-  font-weight:400;
-}
-.btn{
-  display:inline-block;
-  margin-top:20px;
-  padding:10px 20px;
-  background:#ff5fa2;
-  color:white;
-  border-radius:25px;
-  text-decoration:none;
-  transition: 0.3s;
-}
-.btn:hover{
-  box-shadow:0 0 20px #ff69b4;
-}
-
-/* ---------- SECTION ---------- */
-section{
-  padding:80px 60px;
-  border-bottom:1px solid rgba(255,255,255,0.05);
-}
-.section{
-  opacity:0;
-  transform:translateX(-60px);
-  transition:0.8s;
-}
-.section.show{
-  opacity:1;
-  transform:translateX(0);
-}
-h2{
-  color:#ff5fa2;
-  margin-bottom:20px;
-}
-
-/* ---------- SKILLS ---------- */
-.skills-container{
-  display:flex;
-  flex-wrap:wrap;
-  gap:15px;
-}
-.skill-card{
-  background:#ff5fa2;
-  padding:10px 18px;
-  border-radius:20px;
-  font-size:14px;
-  transition: transform 0.3s, box-shadow 0.3s;
-}
-.skill-card:hover{
-  transform: scale(1.1);
-  box-shadow:0 0 15px #ff69b4;
-}
-
-/* ---------- PROJECTS ---------- */
-.project{
-  background:#1c1c1c;
-  padding:20px;
-  border-radius:12px;
-  margin-bottom:20px;
-  transition:0.3s;
-}
-.project:hover{
-  box-shadow:0 0 20px #ff5fa2;
-}
-
-/* ---------- CURRENT LEARNING ---------- */
-.learning{
-  background:#1c1c1c;
-  padding:20px;
-  border-radius:12px;
-  margin-bottom:15px;
-  transition:0.3s;
-}
-.learning:hover{
-  box-shadow:0 0 20px #ff69b4;
-}
-
-/* ---------- CERTIFICATES ---------- */
-.certificates-container{
-  display:grid;
-  grid-template-columns: repeat(auto-fit,minmax(280px,1fr));
-  gap:20px;
-}
-.certificate{
-  background:#1c1c1c;
-  padding:20px;
-  border-radius:12px;
-  transition:0.3s;
-}
-.certificate:hover{
-  box-shadow:0 0 20px #ff5fa2;
-}
-.certificate h4{
-  margin-bottom:8px;
-  color:#ff5fa2;
-}
-.certificate p{
-  font-size:14px;
-  opacity:0.9;
-  margin-bottom:10px;
-}
-
-/* ---------- LIGHT MODE ---------- */
-.light{
-  background: linear-gradient(135deg,#fff,#f2f2f2);
-  color:#000;
-}
-.light h1,.light h2,.light h4{
-  color:#ff5fa2;
-}
-.light .project,
-.light .learning,
-.light .certificate{
-  background:#f2f2f2;
-  color:#000;
-}
-
-/* ---------- FOOTER ---------- */
-footer{
-  text-align:center;
-  padding:30px;
-  font-size:14px;
-  opacity:0.7;
-}
-
-/* ---------- RESPONSIVE ---------- */
-@media(max-width:900px){
-  .hero{
-    flex-direction:column;
-    text-align:center;
-  }
-  .intro{
-    max-width:100%;
-  }
-  .side-nav{
-    display:none;
-  }
-}
+*{margin:0;padding:0;box-sizing:border-box;font-family:Poppins,Segoe UI,sans-serif;}
+body{background:linear-gradient(135deg,#0f0f0f,#1a1a1a);color:#fff;transition:0.5s;overflow-x:hidden;}
+.light{background:linear-gradient(135deg,#fff,#f2f2f2);color:#000;}
+.light h1,.light h2,.light h4{color:#ff5fa2;}
+.light .page{background:#f2f2f2;color:#000;}
+.toggle-btn{position:fixed;left:20px;top:20px;padding:10px 14px;border:none;border-radius:50%;background:#ff5fa2;color:white;cursor:pointer;z-index:300;box-shadow:0 0 15px #ff5fa2;}
+.slider-container{position:relative;overflow:hidden;height:100vh;width:100%;}
+.page{display:none;height:100vh;width:100%;padding:60px;flex-direction:column;justify-content:center;align-items:center;transition:all 0.8s;}
+.page.active{display:flex;animation:fadeSlide 0.8s;}
+@keyframes fadeSlide{0%{opacity:0;transform:translateX(50px);}100%{opacity:1;transform:translateX(0);}}
+.nav-buttons{position:fixed;bottom:30px;width:100%;display:flex;justify-content:center;gap:20px;z-index:200;}
+.nav-buttons button{padding:10px 25px;border:none;border-radius:25px;background:#ff5fa2;color:#fff;cursor:pointer;box-shadow:0 0 15px #ff5fa2;transition:0.3s;}
+.nav-buttons button:hover{box-shadow:0 0 25px #ff69b4;transform:scale(1.1);}
+.profile-box{position:relative;margin-bottom:20px;}
+.profile-box img{width:150px;border-radius:50%;border:5px solid #ff5fa2;animation:float 3s ease-in-out infinite;box-shadow:0 0 15px #ff5fa2;}
+@keyframes float{0%{transform:translateY(0)}50%{transform:translateY(-10px)}100%{transform:translateY(0)}}
+.glitter-border{position:absolute;top:-5px;left:-5px;width:160px;height:160px;border-radius:50%;background:conic-gradient(#ff5fa2,#ff69b4,#ff5fa2,#ff69b4);filter:blur(10px);animation:spin 4s linear infinite;z-index:-1;}
+@keyframes spin{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
+.intro h1{font-size:48px;color:#ff5fa2;margin-bottom:10px;}
+#typing{margin:10px 0;font-weight:400;}
+.btn{display:inline-block;margin-top:15px;padding:10px 20px;background:#ff5fa2;color:white;border-radius:25px;text-decoration:none;transition:0.3s;}
+.btn:hover{box-shadow:0 0 20px #ff69b4;}
+.skills-container{display:flex;flex-wrap:wrap;gap:15px;justify-content:center;}
+.skill-card{background:#ff5fa2;padding:10px 18px;border-radius:20px;font-size:14px;transition:0.3s;}
+.skill-card:hover{transform:scale(1.1);box-shadow:0 0 15px #ff69b4;}
+.project,.learning,.certificate{background:#1c1c1c;padding:20px;border-radius:12px;margin-bottom:20px;transition:0.3s;width:90%;max-width:600px;text-align:center;}
+.project:hover,.learning:hover,.certificate:hover{box-shadow:0 0 20px #ff5fa2;}
+.certificates-container{display:flex;flex-direction:column;align-items:center;gap:20px;}
+@media(max-width:900px){.intro h1{font-size:36px;}.profile-box img{width:120px;}.glitter-border{width:130px;height:130px;}}
 </style>
 </head>
-
 <body>
 
 <button class="toggle-btn" id="toggle">🌙</button>
 
-<!-- SIDE NAV -->
-<div class="side-nav">
-  <a href="#about">About</a>
-  <a href="#learning">Learning</a>
-  <a href="#skills">Skills</a>
-  <a href="#projects">Projects</a>
-  <a href="#resume">Resume</a>
-  <a href="#certificates">Certificates</a>
-  <a href="#contact">Contact</a>
+<div class="slider-container">
+  <!-- Hero / Profile -->
+  <section class="page active" id="hero">
+    <div class="profile-box">
+      <div class="glitter-border"></div>
+      <img src="images/profile.jpg" alt="Akshaya G">
+    </div>
+    <div class="intro">
+      <h1>Akshaya G</h1>
+      <h3 id="typing"></h3>
+      <p>Rooted in self-growth, building skills in software & data analytics.</p>
+      <a href="#" class="btn">Contact Me</a>
+    </div>
+  </section>
+
+  <!-- About -->
+  <section class="page" id="about">
+    <h2>About Me</h2>
+    <p>I am a B.Tech CSBS student passionate about software development, databases, and data-driven decision making. I focus on continuous learning through projects and coding platforms.</p>
+  </section>
+
+  <!-- Currently Learning -->
+  <section class="page" id="learning">
+    <h2>Currently Learning</h2>
+    <div class="learning">📘 <strong>NPTEL – Database Management System</strong><br>Applied SQL, normalization, indexing, and transactions.</div>
+    <div class="learning">💻 <strong>freeCodeCamp – HTML & CSS</strong><br>Practicing responsive web design, layouts, and UI.</div>
+    <div class="learning">🧠 <strong>LeetCode</strong><br>Solving coding problems to improve problem-solving and algorithms.</div>
+  </section>
+
+  <!-- Skills -->
+  <section class="page" id="skills">
+    <h2>Skills</h2>
+    <div class="skills-container">
+      <div class="skill-card">HTML</div>
+      <div class="skill-card">CSS</div>
+      <div class="skill-card">Python</div>
+      <div class="skill-card">C Programming</div>
+      <div class="skill-card">MySQL</div>
+      <div class="skill-card">Power BI</div>
+      <div class="skill-card">GitHub</div>
+    </div>
+  </section>
+
+  <!-- Projects -->
+  <section class="page" id="projects">
+    <h2>Projects</h2>
+    <div class="project">
+      <h4>Personal Portfolio Website</h4>
+      <p>Responsive portfolio with dark/light mode, typing animation, and slider layout.</p>
+    </div>
+    <div class="project">
+      <h4>Power BI Dashboard</h4>
+      <p>Interactive dashboard analyzing mental health data for insights.</p>
+    </div>
+  </section>
+
+  <!-- Certificates -->
+  <section class="page" id="certificates">
+    <h2>Certificates</h2>
+    <div class="certificates-container">
+      <div class="certificate">
+        <h4>HTML Certification (freeCodeCamp)</h4>
+        <p>Learned responsive web design, semantic HTML elements, and layouts.</p>
+        <a class="btn" href="certificates/html_certificate.pdf" target="_blank">View Certificate</a>
+      </div>
+      <div class="certificate">
+        <h4>CSS Certification (freeCodeCamp)</h4>
+        <p>Mastered styling, flexbox, grid, animations, and modern UI techniques.</p>
+        <a class="btn" href="certificates/css_certificate.pdf" target="_blank">View Certificate</a>
+      </div>
+      <div class="certificate">
+        <h4>Database Management (NPTEL)</h4>
+        <p>Applied SQL, normalization, indexing, and database design concepts.</p>
+        <a class="btn" href="certificates/dbms_certificate.pdf" target="_blank">View Certificate</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <section class="page" id="contact">
+    <h2>Contact</h2>
+    <p>Email: akshayagopi0712@gmail.com</p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/akshaya-gopi-7b18a5371" target="_blank">Profile</a></p>
+  </section>
 </div>
 
-<!-- HERO -->
-<section class="hero">
-  <div class="profile-box">
-    <div class="glitter-border"></div>
-    <img src="images/profile.jpg" alt="Akshaya G">
-  </div>
-  <div class="intro">
-    <h1>Akshaya G</h1>
-    <h3 id="typing"></h3>
-    <p>Rooted in self-growth, building skills in software & data analytics.</p>
-    <a href="#contact" class="btn">Contact Me</a>
-  </div>
-</section>
+<div class="nav-buttons">
+  <button id="prev">Previous</button>
+  <button id="next">Next</button>
+</div>
 
-<!-- ABOUT -->
-<section class="section" id="about">
-  <h2>About Me</h2>
-  <p>
-    I am a B.Tech Computer Science and Business Systems (CSBS) student with interest in
-    software development, databases, and data-driven decision making. I focus on
-    continuous learning through courses, coding platforms, and hands-on projects.
-  </p>
-</section>
+<footer style="text-align:center;padding:20px;opacity:0.7;">© 2025 Akshaya G | Portfolio</footer>
 
-<!-- CURRENT LEARNING -->
-<section class="section" id="learning">
-  <h2>Currently Learning</h2>
-
-  <div class="learning">
-    📘 <strong>NPTEL – Database Management System</strong><br>
-    Applied core concepts like SQL queries, normalization, indexing, and transactions
-    to strengthen database design and management skills.
-  </div>
-
-  <div class="learning">
-    💻 <strong>freeCodeCamp – HTML & CSS</strong><br>
-    Practicing responsive web design, layouts, and modern UI techniques
-    for building interactive web pages.
-  </div>
-
-  <div class="learning">
-    🧠 <strong>LeetCode</strong><br>
-    Solving coding problems to improve problem-solving, algorithms,
-    and logical thinking skills.
-  </div>
-</section>
-
-<!-- SKILLS -->
-<section class="section" id="skills">
-  <h2>Skills</h2>
-  <div class="skills-container">
-    <div class="skill-card">HTML</div>
-    <div class="skill-card">CSS</div>
-    <div class="skill-card">Python</div>
-    <div class="skill-card">C Programming</div>
-    <div class="skill-card">MySQL</div>
-    <div class="skill-card">Power BI</div>
-    <div class="skill-card">GitHub</div>
-  </div>
-</section>
-
-<!-- PROJECTS -->
-<section class="section" id="projects">
-  <h2>Projects</h2>
-
-  <div class="project">
-    <h4>Personal Portfolio Website</h4>
-    <p>Designed and developed a responsive portfolio using HTML & CSS with
-    slide-in animations and dark/light mode toggle.</p>
-  </div>
-
-  <div class="project">
-    <h4>Power BI Dashboard</h4>
-    <p>Created an interactive dashboard to analyze mental health data,
-    visualizing insights for better decision making.</p>
-  </div>
-</section>
-
-<!-- RESUME -->
-<section class="section" id="resume">
-  <h2>Resume</h2>
-  <a class="btn" href="resume/Akshaya_Resume.pdf" target="_blank">View Resume</a>
-  <a class="btn" href="resume/Akshaya_Resume.pdf" download>Download</a>
-</section>
-
-<!-- CERTIFICATES -->
-<section class="section" id="certificates">
-  <h2>Certificates</h2>
-  <div class="certificates-container">
-    <div class="certificate">
-      <h4>HTML Certification (freeCodeCamp)</h4>
-      <p>Learned responsive web design, semantic HTML elements, and practical layout techniques.</p>
-      <a class="btn" href="certificates/html_certificate.pdf" target="_blank">View Certificate</a>
-    </div>
-
-    <div class="certificate">
-      <h4>CSS Certification (freeCodeCamp)</h4>
-      <p>Mastered styling, flexbox, grid, animations, and UI design for modern web pages.</p>
-      <a class="btn" href="certificates/css_certificate.pdf" target="_blank">View Certificate</a>
-    </div>
-
-    <div class="certificate">
-      <h4>Database Management (NPTEL)</h4>
-      <p>Applied DBMS fundamentals including SQL queries, normalization, indexing, and database design.</p>
-      <a class="btn" href="certificates/dbms_certificate.pdf" target="_blank">View Certificate</a>
-    </div>
-  </div>
-</section>
-
-<!-- CONTACT -->
-<section class="section" id="contact">
-  <h2>Contact</h2>
-  <p>Email: akshayagopi0712@gmail.com</p>
-  <p>
-    LinkedIn:
-    <a href="https://www.linkedin.com/in/akshaya-gopi-7b18a5371" target="_blank">
-      Profile
-    </a>
-  </p>
-</section>
-
-<footer>
-  © 2025 Akshaya G | Portfolio
-</footer>
-
-<!-- TYPING ANIMATION -->
+<!-- TYPING -->
 <script>
 const texts=["B.Tech CSBS Student","Aspiring Software Developer","Data Analytics Enthusiast"];
 let i=0,j=0,el=document.getElementById("typing");
-function type(){
- if(j<texts[i].length){
-  el.textContent+=texts[i][j++];
-  setTimeout(type,100);
- }else setTimeout(erase,1500);
-}
-function erase(){
- if(j>0){
-  el.textContent=texts[i].substring(0,--j);
-  setTimeout(erase,60);
- }else{
-  i=(i+1)%texts.length;
-  setTimeout(type,300);
- }
-}
+function type(){if(j<texts[i].length){el.textContent+=texts[i][j++];setTimeout(type,100);}else setTimeout(erase,1500);}
+function erase(){if(j>0){el.textContent=texts[i].substring(0,--j);setTimeout(erase,60);}else{i=(i+1)%texts.length;setTimeout(type,300);}}
 type();
 </script>
 
-<!-- SLIDE ANIMATION -->
+<!-- SLIDER NAV -->
 <script>
-const sections=document.querySelectorAll(".section");
-window.addEventListener("scroll",()=>{
- sections.forEach(s=>{
-  if(s.getBoundingClientRect().top<window.innerHeight-100)
-   s.classList.add("show");
- })
-});
+const pages=document.querySelectorAll('.page');
+let currentIndex=0;
+function showPage(index){
+  pages.forEach((p,i)=>{p.classList.remove('active');if(i===index)p.classList.add('active');});
+}
+document.getElementById('next').onclick=()=>{
+  currentIndex=(currentIndex+1)%pages.length;showPage(currentIndex);
+};
+document.getElementById('prev').onclick=()=>{
+  currentIndex=(currentIndex-1+pages.length)%pages.length;showPage(currentIndex);
+};
 </script>
 
-<!-- DARK/LIGHT TOGGLE -->
+<!-- DARK/LIGHT -->
 <script>
 document.getElementById("toggle").onclick=()=>{
- document.body.classList.toggle("light");
+  document.body.classList.toggle("light");
 };
 </script>
 
